[package]
name = "ain-evm-state"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
evm = { version = "0.37", default-features = false, features = ["with-serde"] }
bincode = "1.3.3"
ethereum = "0.14.0"
hex = "0.4.3"
anyhow = "1.0"
rand = "0.8.5"
rlp = "0.5.2"

ain-evm = { path = "../ain-evm" }
