[package]
name = "ain-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
evm = { version = "0.37", default-features = false }
primitive-types = "0.12.1"
log = "0.4"

ain-evm-runtime = { path = "../ain-evm-runtime" }
ain-evm-state = { path = "../ain-evm-state" }
ain-grpc = { path = "../ain-grpc" }

