[package]
name = "ain-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
evm = { version = "0.37", default-features = false }
primitive-types = "0.12.1"
log = "0.4"
rlp = "0.5.2"
libsecp256k1 = "0.7.1"
ethereum = "0.14.0"
sha3 = "0.10.6"
hex = "0.4.3"
anyhow = "1.0"

ain-utils = { path = "../ain-utils" }
